--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,9 @@ Licence URI: https://www.os-templates.com/template-terms
     <style>
       /* body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; } */
       /* h1, h2 { color: #228B22; } */
+      html {
+  scroll-behavior: smooth;
+}
       .container {
         max-width: 800px;
         margin: auto;
@@ -72,6 +75,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
             <li><a href="#services">Compost Education</a></li>
             <li><a href="#CompostingKit">Composting kit</a></li>
+            <li><a href="#Our-BMC">Our BMC</a></li>
             <li><a href="#AboutUs">About Us</a></li>
             <!-- <li><a href="#">Link Text</a></li> -->
           </ul>
@@ -305,6 +309,25 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
+    <section id="Our-BMC" class="hoc container clear">
+      <!-- ################################################################################################ -->
+      <div class="sectiontitle">
+        <!-- <p class="nospace font-xs">Odio duis ut est quis nisl consequat</p> -->
+        <h6 class="heading">Our Business Model Canvas (BMC) </h6>
+      </div>
+      <div >
+
+        <img style="border-radius: 10px;" src="images/demo/Sustainable Waste Management & Composting Business.jpg" alt="" />
+      </div>
+   
+
+      <h1 style="margin-top: 20px;font-weight: bold; font-size: 25px;">
+        complete report
+        <a href="images/demo/report.pdf" style="color: black;">click here for Download</a>
+      </h1>
+
+      <!-- ################################################################################################ -->
+    </section>
     <div class="wrapper row2">
       <section id="AboutUs" class="hoc container clear">
         <!-- ################################################################################################ -->
